--- a/src/galaxy.css
+++ b/src/galaxy.css
@@ -61,6 +61,8 @@
   border-radius: 50%;
   animation: shoot 5s ease-in-out infinite;
   opacity: 0;
+  pointer-events: none;
+  z-index: 1;
 }
 
 @keyframes shoot {
